vcluster_versioned_docs/version-0.20.0/configure/vcluster-yaml/control-plane/components/backing-store/etcd/deploy.mdx
---
title: External etcd
sidebar_label: deploy
sidebar_position: 3
description: Configure an external etcd instance as the virtual cluster's backing store.
---

import ConfigReference from '@site/vcluster/_partials/config/controlPlane/backingStore/etcd/deploy.mdx'

Enabling this feature deploys [etcd](https://etcd.io/) on the host cluster in the same namespace as the virtual cluster and configures the control plane to use it as the backing store. vCluster deploys etcd with a `StatefulSet`, `Service`, and headless `Service`.
```yaml
controlPlane:
  backingStore:
    etcd:
      deploy:
        enabled: true
        ...
```

You can customize the `StatefulSet`  that vCluster uses to deploy etcd. One of the more common customizations is to set resource requests:
```yaml
controlPlane:
  backingStore:
    etcd:
      deploy:
        enabled: true
        statefulSet:
          resources:
            requests:
              cpu: 20m
              memory: 150Mi
```

Add optional annotations to each etcd component.
```yaml
controlPlane:
  backingStore:
    etcd:
      deploy:
        enabled: true
        statefulSet:
          annotations:
            app.kubernetes.io/part-of: "etcd"
            cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
        service:
          annotations:
            app.kubernetes.io/part-of: "etcd"
        headlessService:
          annotations:
            app.kubernetes.io/part-of: "etcd"
```

:::warning
After deploying your vCluster, changing the backing store of vCluster is not supported.
:::

## Config reference

<ConfigReference/>

